// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageLayout /> should render a breadcrumb by itself 1`] = `
<Breadcrumb
  href="/test"
  type="base"
  useReactRouter={true}
>
  <span
    className="baseCrumb"
    data-component-type="breadcrumb"
  >
    <Anchor
      href="/test"
    >
      <a
        href="/test"
      >
        Create
      </a>
    </Anchor>
  </span>
</Breadcrumb>
`;

exports[`<PageLayout /> should render a simple breadcrumbGroup 1`] = `
<BreadcrumbGroup>
  <div
    className="breadcrumbs"
    data-component-type="breadcrumb_group"
  >
    <Breadcrumb
      href="/test"
      type="base"
      useReactRouter={true}
    >
      <span
        className="baseCrumb"
        data-component-type="breadcrumb"
      >
        <Anchor
          href="/test"
        >
          <a
            href="/test"
          >
            Dashboard
          </a>
        </Anchor>
      </span>
    </Breadcrumb>
    <Breadcrumb
      anchorComponentProps={
        Object {
          "useReactRouter": false,
        }
      }
      href="/test"
      type="base"
      useReactRouter={true}
    >
      <span
        className="baseCrumb"
        data-component-type="breadcrumb"
      >
        <Anchor
          anchorComponentProps={
            Object {
              "useReactRouter": false,
            }
          }
          href="/test"
        >
          <a
            href="/test"
          >
            Tasks
          </a>
        </Anchor>
      </span>
    </Breadcrumb>
    <Breadcrumb
      href="/test"
      type="active"
      useReactRouter={true}
    >
      <span
        className="activeCrumb"
        data-component-type="breadcrumb"
      >
        <Anchor
          href="/test"
        >
          <a
            href="/test"
          >
            Create
          </a>
        </Anchor>
      </span>
    </Breadcrumb>
  </div>
</BreadcrumbGroup>
`;
